--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "петък",
     "CL_CF_CP_saturday": "Събота",
     "CL_CF_CP_sunday": "неделя",
-    "CL_DV_OV_delay_start_end_desc": "Можете да забавите вашата програма за готвене, като зададете предпочитания начален или краен час. След като изберете единия, другият ще бъде изчислен автоматично."
+    "CL_DV_OV_delay_start_end_desc": "Можете да забавите вашата програма за готвене, като зададете предпочитания начален или краен час. След като изберете единия, другият ще бъде изчислен автоматично.",
+    "drink_inventory": "Опис на напитки",
+    "ac_statistice_content": "Тези статистически данни се основават на мрежови статистики, а част от данните се основава на измерени лабораторни условия, само за справка на потребителите.",
+    "CL_CF_FM_x_items_selected": "*** избрани елементи",
+    "CL_CF_FM_remove_items": "Премахване на елементи",
+    "p_try_again": "моля опитайте отново",
+    "exit_report_i": "ПРОБЛЕМ С ОТЧЕТВАНЕ НА ИЗХОД",
+    "AW": "Аруба",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "Намалете бързо температурата във фурната след приключване на готвенето или между готвенето на различни ястия.",
+    "CL_CF_CS_ble_scan_not_list_2": "Ако вашето устройство не е в списъка, можете да щракнете върху „ОПИТАЙ ОТНОВО“, за да откриете отново чрез blutooth.",
+    "CL_CF_CS_ble_scan_another_way": "Конфигурирайте по друг начин",
+    "CL_CF_CS_ble_scan_have_found": "Намерихме устройства чрез bluetooth. Изберете вашето устройство за конфигуриране.",
+    "pump_holiday_start_time_greater_one_day": "Настройката на режим “Ваканция” трябва да бъде повече от 1 ден!",
+    "CL_CF_FM_food_type": "Тип храна",
+    "CL_CF_FM_add_food_from_lib": "Добавете храна от библиотеката"
 }
