--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "Παρασκευή",
     "CL_CF_CP_saturday": "Σάββατο",
     "CL_CF_CP_sunday": "Κυριακή",
-    "CL_DV_OV_delay_start_end_desc": "Μπορείτε να καθυστερήσετε το πρόγραμμα μαγειρέματος ρυθμίζοντας είτε την προτιμώμενη ώρα έναρξης είτε λήξης. Αφού επιλέξετε το ένα, το άλλο θα υπολογιστεί αυτόματα."
+    "CL_DV_OV_delay_start_end_desc": "Μπορείτε να καθυστερήσετε το πρόγραμμα μαγειρέματος ρυθμίζοντας είτε την προτιμώμενη ώρα έναρξης είτε λήξης. Αφού επιλέξετε το ένα, το άλλο θα υπολογιστεί αυτόματα.",
+    "drink_inventory": "Απογραφή ποτών",
+    "ac_statistice_content": "Αυτά τα στατιστικά δεδομένα βασίζονται σε στατιστικές δικτύου και μέρος των δεδομένων βασίζεται σε εργαστηριακές συνθήκες που μετρήθηκαν, μόνο για αναφορά χρηστών.",
+    "CL_CF_FM_x_items_selected": "Επιλέχθηκαν *** στοιχεία",
+    "CL_CF_FM_remove_items": "Κατάργηση αντικειμένων",
+    "p_try_again": "δοκιμάστε ξανά",
+    "exit_report_i": "ΕΞΟΔΟΣ ΖΗΤΗΜΑΤΟΣ ΑΝΑΦΟΡΑΣ",
+    "AW": "αρούμπα",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "Χαμηλώστε γρήγορα τη θερμοκρασία στο εσωτερικό του φούρνου μετά την ολοκλήρωση του μαγειρέματος ή όταν μαγειρεύετε διαφορετικά πιάτα.",
+    "CL_CF_CS_ble_scan_not_list_2": "Εάν η συσκευή σας δεν εμφανίζεται στη λίστα, μπορείτε να κάνετε κλικ στο «ΠΡΟΣΠΑΘΗΣΤΕ ΞΑΝΑ» για να εντοπίσετε ξανά μέσω bluetooth.",
+    "CL_CF_CS_ble_scan_another_way": "Διαμόρφωση με άλλο τρόπο",
+    "CL_CF_CS_ble_scan_have_found": "Βρήκαμε συσκευές μέσω bluetooth. Επιλέξτε τη συσκευή σας για διαμόρφωση.",
+    "pump_holiday_start_time_greater_one_day": "Η ρύθμιση της λειτουργίας διακοπών πρέπει να είναι μεγαλύτερη από 1 ημέρα!",
+    "CL_CF_FM_food_type": "Τύπος Τροφίμων",
+    "CL_CF_FM_add_food_from_lib": "Προσθήκη τροφής από τη βιβλιοθήκη"
 }
