--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -148,7 +148,7 @@
     "ac_wind_direction": "Fan Direction",
     "ac_ai": "AI",
     "ac_has_close": "Closed",
-    "ac_people_feel_wind": "AI wind",
+    "ac_people_feel_wind": "AI Wind",
     "ac_sleep": "Sleep",
     "ac_mute": "Quiet mode",
     "ac_save_energy": "Energy-saving",
@@ -1731,7 +1731,7 @@
     "pump_holiday_start_time_greater": "Start time must be less than end time!",
     "pump_holiday_end_time_less": "End time must be greater than start time!",
     "pump_holiday_start_hint": "Please select a start and end date!",
-    "pump_change_date_hint": "Whether to rest Holiday mode Settings?",
+    "pump_change_date_hint": "Whether to reset Holiday mode Settings?",
     "timing_setting_temp": "Setting temperature",
     "timing_in_holiday_hint": "Holiday mode is enabled, and you cannot create or open timed tasks.",
     "pump_holiday_set_min_day": "Holiday mode setting must be greater than 1 day!",
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "Friday",
     "CL_CF_CP_saturday": "Saturday",
     "CL_CF_CP_sunday": "Sunday",
-    "CL_DV_OV_delay_start_end_desc": "You can delay your cooking program by setting either your preferred start or end time. Once you've chosen one, the other will be automatically calculated."
+    "CL_DV_OV_delay_start_end_desc": "You can delay your cooking program by setting either your preferred start or end time. Once you've chosen one, the other will be automatically calculated.",
+    "drink_inventory": "Drink Inventory",
+    "ac_statistice_content": "This statistical data is based on network statistics, and part of the data is based on laboratory conditions measured, only for user’s reference. ",
+    "CL_CF_FM_x_items_selected": "*** items selected",
+    "CL_CF_FM_remove_items": "Remove Items",
+    "p_try_again": "please try again",
+    "exit_report_i": "EXIT REPORTING ISSUE",
+    "AW": "Aruba",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "Rapidly lower the temperature inside the oven after cooking is complete or when between cooking different dishes.",
+    "CL_CF_CS_ble_scan_not_list_2": "If your device is not listed, you can click ‘TRY AGAIN’ to detect via blutooth again.",
+    "CL_CF_CS_ble_scan_another_way": "Configure in another way",
+    "CL_CF_CS_ble_scan_have_found": "We found devices via bluetooth. Select your device to configure.",
+    "pump_holiday_start_time_greater_one_day": "Holiday mode setting must be greater than 1 days",
+    "CL_CF_FM_food_type": "Food Type",
+    "CL_CF_FM_add_food_from_lib": "Add Food From Library"
 }
