--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "جمعه",
     "CL_CF_CP_saturday": "شنبه",
     "CL_CF_CP_sunday": "یکشنبه",
-    "CL_DV_OV_delay_start_end_desc": "شما می توانید با تنظیم زمان شروع یا پایان دلخواه برنامه پخت خود را به تاخیر بیاندازید. هنگامی که یکی را انتخاب کردید، دیگری به طور خودکار محاسبه می شود."
+    "CL_DV_OV_delay_start_end_desc": "شما می توانید با تنظیم زمان شروع یا پایان دلخواه برنامه پخت خود را به تاخیر بیاندازید. هنگامی که یکی را انتخاب کردید، دیگری به طور خودکار محاسبه می شود.",
+    "drink_inventory": "موجودی نوشیدنی",
+    "ac_statistice_content": "این داده‌های آماری مبتنی بر آمارهای شبکه و بخشی از داده‌های مبتنی بر شرایط اندازه‌گیری‌شده در آزمایشگاه، فقط جهت اطلاع کاربران است.",
+    "CL_CF_FM_x_items_selected": "*** موارد انتخاب شده است",
+    "CL_CF_FM_remove_items": "موارد را حذف کنید",
+    "p_try_again": "لطفا دوباره امتحان کنید",
+    "exit_report_i": "خروج از مسئله گزارش",
+    "AW": "آروبا",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "پس از اتمام پخت و پز یا در فاصله زمانی بین پختن غذاهای مختلف، دمای داخل فر را به سرعت کاهش دهید.",
+    "CL_CF_CS_ble_scan_not_list_2": "اگر دستگاه شما در لیست نیست، می‌توانید برای شناسایی دوباره از طریق بلوتوث، روی «تلاش مجدد» کلیک کنید.",
+    "CL_CF_CS_ble_scan_another_way": "به روش دیگری پیکربندی کنید",
+    "CL_CF_CS_ble_scan_have_found": "ما دستگاه ها را از طریق بلوتوث پیدا کردیم. دستگاه خود را برای پیکربندی انتخاب کنید.",
+    "pump_holiday_start_time_greater_one_day": "تنظیم حالت تعطیلات باید بیشتر از 1 روز باشد!",
+    "CL_CF_FM_food_type": "نوع غذا",
+    "CL_CF_FM_add_food_from_lib": "افزودن غذا از کتابخانه"
 }
