--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "יוֹם שִׁישִׁי",
     "CL_CF_CP_saturday": "שַׁבָּת",
     "CL_CF_CP_sunday": "יוֹם רִאשׁוֹן",
-    "CL_DV_OV_delay_start_end_desc": "אתה יכול לעכב את תוכנית הבישול שלך על ידי הגדרת שעת ההתחלה או הסיום המועדפת עליך. לאחר שתבחר אחד, השני יחושב אוטומטית."
+    "CL_DV_OV_delay_start_end_desc": "אתה יכול לעכב את תוכנית הבישול שלך על ידי הגדרת שעת ההתחלה או הסיום המועדפת עליך. לאחר שתבחר אחד, השני יחושב אוטומטית.",
+    "drink_inventory": "מלאי משקאות",
+    "ac_statistice_content": "הנתונים הסטטיסטיים הללו מבוססים על נתוני רשת, וחלק מהנתונים מבוסס על תנאי מעבדה שנמדדו, רק לצורך המשתמשים.",
+    "CL_CF_FM_x_items_selected": "*** פריטים נבחרו",
+    "CL_CF_FM_remove_items": "הסר פריטים",
+    "p_try_again": "אנא נסה שוב",
+    "exit_report_i": "צא מבעיית הדיווח",
+    "AW": "מיוט",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "הורידו במהירות את הטמפרטורה בתוך התנור לאחר סיום הבישול או בין בישול מנות שונות.",
+    "CL_CF_CS_ble_scan_not_list_2": "אם המכשיר שלך לא מופיע ברשימה, תוכל ללחוץ על 'נסה שוב' כדי לזהות שוב באמצעות Bluetooth.",
+    "CL_CF_CS_ble_scan_another_way": "הגדר בדרך אחרת",
+    "CL_CF_CS_ble_scan_have_found": "מצאנו מכשירים באמצעות Bluetooth. בחר את המכשיר שלך להגדרה.",
+    "pump_holiday_start_time_greater_one_day": "הגדרת מצב חג חייבת להיות יותר מיום אחד",
+    "CL_CF_FM_food_type": "סוג מזון",
+    "CL_CF_FM_add_food_from_lib": "הוסף אוכל מהספרייה"
 }
