--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "शुक्रवार",
     "CL_CF_CP_saturday": "शनिवार",
     "CL_CF_CP_sunday": "रविवार",
-    "CL_DV_OV_delay_start_end_desc": "आप अपने पसंदीदा प्रारंभ या समाप्ति समय को सेट करके अपने खाना पकाने के कार्यक्रम में देरी कर सकते हैं। एक बार जब आप एक चुन लेते हैं, तो दूसरे की गणना स्वचालित रूप से की जाएगी।"
+    "CL_DV_OV_delay_start_end_desc": "आप अपने पसंदीदा प्रारंभ या समाप्ति समय को सेट करके अपने खाना पकाने के कार्यक्रम में देरी कर सकते हैं। एक बार जब आप एक चुन लेते हैं, तो दूसरे की गणना स्वचालित रूप से की जाएगी।",
+    "drink_inventory": "पेय सूची",
+    "ac_statistice_content": "यह सांख्यिकीय डेटा नेटवर्क सांख्यिकियों पर आधारित है, और डेटा का हिस्सा प्रयोगशाला स्थितियों पर मापा गया है, केवल उपयोगकर्ताओं के संदर्भ के लिए।",
+    "CL_CF_FM_x_items_selected": "*** आइटम चयनित",
+    "CL_CF_FM_remove_items": "आइटम हटाएँ",
+    "p_try_again": "कृपया पुन: प्रयास करें",
+    "exit_report_i": "निकास रिपोर्टिंग समस्या",
+    "AW": "अरूबा",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "खाना पकाने के बाद या विभिन्न व्यंजन पकाने के बीच ओवन के अंदर का तापमान तेजी से कम कर दें।",
+    "CL_CF_CS_ble_scan_not_list_2": "यदि आपका डिवाइस सूचीबद्ध नहीं है, तो आप ब्लूटूथ के माध्यम से पुनः पता लगाने के लिए 'पुनः प्रयास करें' पर क्लिक कर सकते हैं।",
+    "CL_CF_CS_ble_scan_another_way": "दूसरे तरीके से कॉन्फ़िगर करें",
+    "CL_CF_CS_ble_scan_have_found": "हमें ब्लूटूथ के ज़रिए डिवाइस मिले हैं। कॉन्फ़िगर करने के लिए अपना डिवाइस चुनें।",
+    "pump_holiday_start_time_greater_one_day": "हॉलिडे मोड सेटिंग 1 दिन से ज़्यादा होनी चाहिए",
+    "CL_CF_FM_food_type": "भोजन का प्रकार",
+    "CL_CF_FM_add_food_from_lib": "लाइब्रेरी से खाना जोड़ें"
 }
