--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "жұма",
     "CL_CF_CP_saturday": "сенбі",
     "CL_CF_CP_sunday": "жексенбі",
-    "CL_DV_OV_delay_start_end_desc": "Таңдаулы басталу немесе аяқталу уақытын орнату арқылы пісіру бағдарламасын кейінге қалдыра аласыз. Біреуін таңдағаннан кейін екіншісі автоматты түрде есептеледі."
+    "CL_DV_OV_delay_start_end_desc": "Таңдаулы басталу немесе аяқталу уақытын орнату арқылы пісіру бағдарламасын кейінге қалдыра аласыз. Біреуін таңдағаннан кейін екіншісі автоматты түрде есептеледі.",
+    "drink_inventory": "Сусынды түгендеу",
+    "ac_statistice_content": "Бұл статистикалық деректер желілік статистикаларға негізделген және бір бөлігі деректер лабораториялық шарттарында мөлшерленген, тек пайдаланушылардың сілтемесі үшін.",
+    "CL_CF_FM_x_items_selected": "*** элементтер таңдалды",
+    "CL_CF_FM_remove_items": "Элементтерді жою",
+    "p_try_again": "қайталап көріңіз",
+    "exit_report_i": "ЕСЕП БЕРУ МӘСЕЛЕСІН ШЫҒУ",
+    "AW": "Аруба",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "Пісіру аяқталғаннан кейін немесе әртүрлі тағамдарды пісіру арасында пештің ішіндегі температураны тез төмендетіңіз.",
+    "CL_CF_CS_ble_scan_not_list_2": "Құрылғыңыз тізімде жоқ болса, bluetooth арқылы қайта анықтау үшін «ҚАЙТАЛАП КӨРУ» түймесін басуға болады.",
+    "CL_CF_CS_ble_scan_another_way": "Басқа жолмен конфигурациялаңыз",
+    "CL_CF_CS_ble_scan_have_found": "Біз құрылғыларды bluetooth арқылы таптық. Конфигурациялау үшін құрылғыны таңдаңыз.",
+    "pump_holiday_start_time_greater_one_day": "Демалыс режимінің параметрі 1 күннен көп болуы керек!",
+    "CL_CF_FM_food_type": "Тамақ түрі",
+    "CL_CF_FM_add_food_from_lib": "Кітапханадан тағам қосыңыз"
 }
