--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "петок",
     "CL_CF_CP_saturday": "сабота",
     "CL_CF_CP_sunday": "недела",
-    "CL_DV_OV_delay_start_end_desc": "Можете да ја одложите програмата за готвење со поставување на претпочитаното време за почеток или крај. Откако ќе изберете еден, другиот автоматски ќе се пресметува."
+    "CL_DV_OV_delay_start_end_desc": "Можете да ја одложите програмата за готвење со поставување на претпочитаното време за почеток или крај. Откако ќе изберете еден, другиот автоматски ќе се пресметува.",
+    "drink_inventory": "Инвентар за пијалоци",
+    "ac_statistice_content": "Овие статистички податоци се базираат на мрежна статистика, а дел од податоците се базираат на измерени лабораториски услови, само за упатување на корисникот. ",
+    "CL_CF_FM_x_items_selected": "Избрани се *** ставки",
+    "CL_CF_FM_remove_items": "Отстрани ставки",
+    "p_try_again": "ве молиме обидете се повторно",
+    "exit_report_i": "ИЗЛЕЗЕТЕ ГО ПРОБРАЛОТ СО ИЗВЕСТУВАЊЕ",
+    "AW": "аруба",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "Брзо намалете ја температурата во рерната по завршувањето на готвењето или кога помеѓу готвењето различни јадења.",
+    "CL_CF_CS_ble_scan_not_list_2": "Ако вашиот уред не е наведен, можете да кликнете „ПОБИДЕТЕ ПОВТОРНО“ за повторно да откриете преку блутут.",
+    "CL_CF_CS_ble_scan_another_way": "Конфигурирајте на друг начин",
+    "CL_CF_CS_ble_scan_have_found": "Најдовме уреди преку bluetooth. Изберете го вашиот уред за конфигурирање.",
+    "pump_holiday_start_time_greater_one_day": "Поставката за режим за одмор мора да биде поголема од 1 ден!",
+    "CL_CF_FM_food_type": "Тип на храна",
+    "CL_CF_FM_add_food_from_lib": "Додадете храна од библиотеката"
 }
