--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -282,7 +282,7 @@
     "pind_function_warm_up": "Aquecer",
     "pind_function_grill": "Grelhar",
     "pind_function_hestan_mode": "Modo Celsius°Cooking™",
-    "pind_function_hestan_slow": "Cozimento lento ou sous vide",
+    "pind_function_hestan_slow": "Cozedura lenta ou Sous-vide",
     "pind_function_hestan_boil": "Ferver/cozinhar com água",
     "pind_function_hestan_heat": "Aquecer-se e fritar",
     "pind_set_temperature": "Regular temperatura",
@@ -494,7 +494,7 @@
     "add_appliance_pair_failed": "Falha no emparelhamento",
     "Super_cool": "Super Cool",
     "Fast_freeze": "Super Freeze",
-    "child_lock": "Bloqueio infantil",
+    "child_lock": "Bloqueio para crianças",
     "cooler": "Refrigerador",
     "freezer": "Freezer",
     "program_name": "PROGRAMA",
@@ -538,7 +538,7 @@
     "heat_mode_regenerate": "Sistema de reaquecimento/regeneração",
     "heat_mode_descale": "Descalcificar",
     "heat_mode_mw_defrost": "Descongelamento Mw",
-    "heat_mode_sousvide": "Sous Vide",
+    "heat_mode_sousvide": "Sous-vide",
     "heat_mode_low_temp_steam": "Vapor de baixa temperatura",
     "heat_mode_steam": "Vapor",
     "heat_mode_quick": "Rápido",
@@ -564,7 +564,7 @@
     "LOWER": "INFERIOR",
     "UPPER": "SUPERIOR",
     "HYGIENE": "HIGIENE",
-    "CRYSTAL_GLASS": "VIDRO CRISTAL",
+    "CRYSTAL_GLASS": "VIDRO DE CRISTAL",
     "QUICK_PRO_WASH": "LAVAGEM RÁPIDA PRO",
     "SELF_CLEANING": "AUTOLIMPEZA",
     "NORMAL_MODE": "MODO NORMAL",
@@ -972,7 +972,7 @@
     "washer_atag_step_wash_way_quiet": "Silencioso",
     "washer_atag_step_wash_way_powerful": "Poderoso",
     "finish": "TERMINAR",
-    "setting_auto_child_lock": "Bloqueio Infantil",
+    "setting_auto_child_lock": "Bloqueio para crianças",
     "setting_key_sound_level": "Nível de som principal",
     "setting_key_sensitivity_level": "Nível de sensibilidade chave",
     "setting_demo_mode": "Modo de demonstração",
@@ -1057,12 +1057,12 @@
     "heat_mode_hotair_bottomheat": "Ar quente + Aquecedor inferior",
     "heat_mode_bottom_topheat_fan_steam": "Inferior Calor superior Ventilador Vapor",
     "heat_mode_largegrill_fan_steam": "Grelha grande Ventilador Vapor",
-    "user_manual": "Manual do usuário",
+    "user_manual": "Manual do utilizador",
     "ap_days_of_the_week": "Dias da semana",
     "ap_only_once": "Apenas uma vez",
     "general": "Geral",
-    "appliance_name": "Nome do eletrodoméstico",
-    "appliance_buying_date": "Data de compra do eletrodoméstico",
+    "appliance_name": "Nome do aparelho",
+    "appliance_buying_date": "Data de compra do aparelho",
     "display": "Visor",
     "after": "após",
     "after_five_minute": "5 min",
@@ -1145,7 +1145,7 @@
     "wine_zone_b": "Zona B",
     "wine_zone_a": "Zona A",
     "vibration": "VIBRAÇÃO",
-    "wen": "Qua",
+    "wen": "Qua.",
     "sta": "Sáb.",
     "january": "J",
     "february": "F",
@@ -1217,7 +1217,7 @@
     "date": "Data",
     "ambient_mode": "MODO AMBIENTE",
     "ech_mode": "Modo Eco",
-    "appliance_paired": "Eletrodoméstico emparelhado",
+    "appliance_paired": "Dispositivo emparelhado",
     "start_using_connect_life": "Começar a usar o ConnectLife é fácil!",
     "create_your_user_profile": "Crie o seu perfil de utilizador e comece a utilizar o ConnectLife com os seus eletrodomésticos.",
     "sign_in": "INICIAR SESSÃO",
@@ -1249,13 +1249,13 @@
     "create_account": "CRIAR CONTA",
     "register_hi": "OLÁ",
     "register_verification_tips": "Introduza o código de verificação do e-mail para continuar com o registo.",
-    "register_success_tips": "O aplicativo ConnectLife esta pronto",
+    "register_success_tips": "Está tudo pronto para começar a utilizar o ConnectLife",
     "get_verification_code": "OBTER CÓDIGO DE VERIFICAÇÃO",
     "register_privacy_policy_title": "Contrato de licença de utilizador final",
     "register_privacy_policy_terms_conditions": "Termos e condições do utilizador final",
     "register_privacy_policy_connetlife": "Política de privacidade ConnectLife",
     "reset_psw_tips": "Crie uma nova senha para a sua conta ConnectLife.",
-    "reset_new_psw": "Nova senha",
+    "reset_new_psw": "Nova palavra-passe",
     "inconsistent_passwords": "As palavras-passe não coincidem",
     "login_failed": "Falha ao iniciar sessão",
     "opend_tickets_empty": "A lista de pedidos abertos está vazia.",
@@ -1273,25 +1273,25 @@
     "automatic": "AUTOMATICAMENTE",
     "manual": "MANUALMENTE",
     "bind_wine_cooler_first": "Emparelhe o armário de climatização de vinho com o seu dispositivo.",
-    "name_your_appliance": "Atribua um nome ao seu eletrodoméstico",
+    "name_your_appliance": "Dê um nome ao seu dispositivo",
     "appliance_pairing_failed_content": "O emparelhamento do eletrodoméstico falhou. Certifique-se de que o eletrodoméstico está em modo de emparelhamento e tente novamente.",
     "preview": "Pré-visualizar",
-    "camera_permissions": "O sistema detetou que não obteve permissões da câmara.",
-    "go_setting": "ABRIR CONFIGURAÇÕES",
+    "camera_permissions": "O sistema detetou que não obteve permissões para a câmara.",
+    "go_setting": "Abrir definições",
     "month": "Mês",
     "year": "Ano",
-    "chart_jan": "Jan",
+    "chart_jan": "Jan.",
     "chart_feb": "Fev",
     "chart_mar": "Mar",
     "chart_apr": "Abr",
     "chart_may": "Mai",
     "chart_jun": "Jun",
-    "chart_july": "Jul",
-    "chart_aug": "Ago",
-    "chart_sept": "Set",
-    "chart_oct": "Out",
-    "chart_nov": "Nov",
-    "chart_dec": "Dez",
+    "chart_july": "Jul.",
+    "chart_aug": "Ago.",
+    "chart_sept": "Set.",
+    "chart_oct": "Out.",
+    "chart_nov": "Nov.",
+    "chart_dec": "Dez.",
     "rule_email": "Introduza um e-mail válido!",
     "support_tickets": "Pedidos de suporte",
     "opened_tickets": "PEDIDOS ABERTOS",
@@ -1311,7 +1311,7 @@
     "register_success": "Registo bem-sucedido",
     "register_fail": "Falha no registo",
     "reset_psw_success_tips": "A palavra-passe da sua conta ConnectLife foi reposta.",
-    "pt_camera": "permissão da câmara",
+    "pt_camera": "autorização da câmara",
     "fail": "Falha",
     "privacty_policy": "Política de privacidade",
     "update_userprofile_failed": "A atualização do perfil do utilizador falhou.",
@@ -1319,7 +1319,7 @@
     "bottls_removed": "Garrafas removidas",
     "warning": "aviso",
     "error": "Erro",
-    "image_crop": "Corte de imagem",
+    "image_crop": "Recorte de imagem",
     "email_has_registered_tips": "Este e-mail já está registrado.",
     "email_has_not_registered_tips": "Este e-mail não foi registado.",
     "request_fail_tips": "O pedido falhou. Tente novamente mais tarde.",
@@ -1336,34 +1336,34 @@
     "view_wine_data": "VER DADOS DO VINHO",
     "picture_not_exist": "A imagem não existe.",
     "verification_code_error": "Código de verificação incorreto",
-    "reset_password_error": "Erro de definição de palavra-passe",
+    "reset_password_error": "Erro na definição da palavra-passe",
     "switchs": "MUDAR",
     "light_modes": "MODOS DE ILUMINAÇÃO",
     "automatic_date_and_time": "Data e hora automáticas",
     "select_how_light_modes": "selecionar como os modos de iluminação correspondem às ações do utilizador",
-    "light_mode_settings": "CONFIGURAÇÕES DOS MODOS DE ILUMINAÇÃO",
+    "light_mode_settings": "DEFINIÇÕES DOS MODOS DE ILUMINAÇÃO",
     "function_mode": "Modo de função",
-    "shelf_lights": "Luzes de prateleira",
+    "shelf_lights": "Luzes da prateleira",
     "rgb_light": "Luz RGB",
     "rgb_lights_colour": "Cor da luz RGB",
     "on_for": "Ligado para",
     "ticket_number": "NÚMERO DE PEDIDO",
     "no_internet_connection": "Sem ligação à internet",
-    "control_appliance": "Controlar eletrodoméstico",
+    "control_appliance": "Controlar dispositivo",
     "Inventory_management": "Gestão de Inventário",
     "Inventory_type_detail_title": "Mudar o tipo de gestão de inventário.",
     "Inventory_type_detail_generic_change_to_exact": "Mudar o tipo de gestão de inventário de Genérico para Exato colocará todos os seus vinhos em posições não colocadas. Pode posicioná-los digitalizando os rótulos das garrafas.",
     "Inventory_type_detail_exact_change_to_generic": "Alterar o tipo de gestão de inventário de Exato para Genérico fará com que perca todos os dados relacionados com a posição da garrafa.",
-    "service_tickets": "Pedidos de serviço",
-    "service_order_id": "ID DE PEDIDO DE SERVIÇO",
-    "claim_id": "ID DE RECLAMAÇÃO",
+    "service_tickets": "Pedidos de assistência",
+    "service_order_id": "ID DO PEDIDO DE ASSISTÊNCIA",
+    "claim_id": "ID DA RECLAMAÇÃO",
     "new_firmware_update_title": "Atualização de firmware disponível",
-    "show_only_unplaced": "Mostrar apenas não colocados",
-    "show_only_removed": "Mostrar apenas removidos",
-    "show_only_favourite": "Mostrar apenas favoritos",
+    "show_only_unplaced": "Mostrar apenas os não colocados",
+    "show_only_removed": "Mostrar apenas os removidos",
+    "show_only_favourite": "Mostrar apenas os favoritos",
     "request_permissions": "Esta aplicação pode não funcionar corretamente sem as permissões solicitadas.",
     "select_vintage": "Selecionar colheita",
-    "appliance_offline": "Eletrodoméstico offline",
+    "appliance_offline": "Dispositivo offline",
     "register_privacy_policy_tips_new": "A utilização desta aplicação está sujeita a Contrato de Licença de Utilizador Final. Pode clicar em baixo para concordar com o Contrato de Licença de Utilizador Final e com a Política de Proteção de Dados, ou cancelar para sair desta aplicação.",
     "access_failed": "O acesso falhou.",
     "delete_account": "Eliminar conta",
@@ -1551,13 +1551,13 @@
     "ZR": "Zaire",
     "ZM": "Zâmbia",
     "remove_or_unplaced_wine_cabinet_tips": "O vinho removido ou não colocado não pode ser apresentado no modelo do armário",
-    "add_appliance_new": "Adicionar eletrodoméstico",
-    "failed_to_obtain_manual": "Falha ao obter manual",
+    "add_appliance_new": "Adicionar dispositivo",
+    "failed_to_obtain_manual": "Não foi possível obter o manual",
     "add_appliance_3_zone_wine_climate_cabinet": "Armário de climatização de vinho de 3 zonas",
     "turn_on_the_remote": "Por favor, ligue o controle remoto no dispositivo.",
     "d_temperature_unit": "UNIDADE DE TEMPERATURA",
     "d_time_format": "FORMATO DE HORA",
-    "d_date_format": "FORMATO DE DATA",
+    "d_date_format": "FORMATO DA DATA",
     "d_system": "Sistema",
     "d_display_settings": "CONFIGURAÇÕES DO VISOR",
     "d_color_theme": "TEMA DE CORES",
@@ -1620,7 +1620,7 @@
     "STR_PROG_QUICK": "Rápido",
     "STR_PROG_QUICK_PRO": "Rápido Pro",
     "STR_PROG_PREHEATED": "Pré-aquecido",
-    "STR_PROG_CRYSTAL": "Vidro cristal",
+    "STR_PROG_CRYSTAL": "Vidro de cristal",
     "STR_PROG_TIME": "Programa tempo",
     "STR_PROG_HYGIENE": "Higiene",
     "STR_PROG_PLASTIC": "Plástico",
@@ -1826,7 +1826,7 @@
     "anti_crease": "Anti-Vincos",
     "nature_dry": "Secagem natural",
     "wm_dose_level": "nível de dose",
-    "please_close_child_lock_first": "Por favor, desligue o bloqueio infantil primeiro",
+    "please_close_child_lock_first": "Desligue primeiro o bloqueio para crianças",
     "your_washing_is_done": "A sua lavagem terminou.",
     "dry_washing_linkage_hint": "Seque a roupa com as mesmas configurações que usou na máquina de lavar.",
     "reset_password_tips_1": "Introduza o seu e-mail e será enviado um código de verificação para voltar a aceder à sua conta.",
@@ -3861,7 +3861,7 @@
     "hob_heater_level": "Nível do aquecedor",
     "hob_universal_timer": "Temporizador universal",
     "hob_stopwatch": "Cronômetro",
-    "hob_permanent_child_lock": "Bloqueio de segurança permanente para crianças",
+    "hob_permanent_child_lock": "Bloqueio para crianças permanente",
     "hob_permanent_child_lock_content": "Habilitar ou desabilitar o bloqueio permanente para crianças.",
     "hob_permanent_child_lock_setting": "Bloqueio permanente para crianças",
     "hob_volume_settings": "Definições de Volume",
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "Sexta-feira",
     "CL_CF_CP_saturday": "Sábado",
     "CL_CF_CP_sunday": "Domingo",
-    "CL_DV_OV_delay_start_end_desc": "Você pode atrasar seu programa de cozimento definindo seu horário de início ou término preferido. Depois de escolher um, o outro será calculado automaticamente."
+    "CL_DV_OV_delay_start_end_desc": "Você pode atrasar seu programa de cozimento definindo seu horário de início ou término preferido. Depois de escolher um, o outro será calculado automaticamente.",
+    "drink_inventory": "Inventário de bebidas",
+    "ac_statistice_content": "Estes dados estatísticos são baseados em estatísticas de rede, e parte dos dados é baseada em condições de laboratório medidas, apenas para referência dos usuários.",
+    "CL_CF_FM_x_items_selected": "*** itens selecionados",
+    "CL_CF_FM_remove_items": "Remover itens",
+    "p_try_again": "por favor tente novamente",
+    "exit_report_i": "PROBLEMA DE RELATÓRIO DE SAÍDA",
+    "AW": "Aruba",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "Abaixe rapidamente a temperatura dentro do forno após terminar o cozimento ou entre os preparos de pratos diferentes.",
+    "CL_CF_CS_ble_scan_not_list_2": "Se o seu dispositivo não estiver listado, você pode clicar em \"TENTAR NOVAMENTE\" para detectar via bluetooth novamente.",
+    "CL_CF_CS_ble_scan_another_way": "Configurar de outra forma",
+    "CL_CF_CS_ble_scan_have_found": "Encontrámos dispositivos via bluetooth. Selecione o seu dispositivo para configurar.",
+    "pump_holiday_start_time_greater_one_day": "A programação do modo de férias deve ser superior a 1 dia",
+    "CL_CF_FM_food_type": "Tipo de comida",
+    "CL_CF_FM_add_food_from_lib": "Adicionar comida da biblioteca"
 }
