--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "Пятница",
     "CL_CF_CP_saturday": "Суббота",
     "CL_CF_CP_sunday": "Воскресенье",
-    "CL_DV_OV_delay_start_end_desc": "Вы можете отложить программу приготовления пищи, установив желаемое время начала или окончания. После того, как вы выбрали одно, другое будет рассчитано автоматически."
+    "CL_DV_OV_delay_start_end_desc": "Вы можете отложить программу приготовления пищи, установив желаемое время начала или окончания. После того, как вы выбрали одно, другое будет рассчитано автоматически.",
+    "drink_inventory": "Инвентарь для напитков",
+    "ac_statistice_content": "Эти статистические данные основаны на сетевой статистике, и часть данных основана на измеренных в лабораторных условиях, только для справки пользователей.",
+    "CL_CF_FM_x_items_selected": "*** выбрано элементов",
+    "CL_CF_FM_remove_items": "Удалить элементы",
+    "p_try_again": "пожалуйста, попробуйте еще раз",
+    "exit_report_i": "ВЫХОД СООБЩЕНИЯ О ПРОБЛЕМЕ",
+    "AW": "Аруба",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "Быстро понижайте температуру внутри духовки после завершения приготовления или между приготовлением разных блюд.",
+    "CL_CF_CS_ble_scan_not_list_2": "Если вашего устройства нет в списке, вы можете нажать «ПОВТОРИТЬ ПОПРОБОВКУ», чтобы снова выполнить обнаружение через Bluetooth.",
+    "CL_CF_CS_ble_scan_another_way": "Настроить другим способом",
+    "CL_CF_CS_ble_scan_have_found": "Мы нашли устройства через Bluetooth. Выберите устройство для настройки.",
+    "pump_holiday_start_time_greater_one_day": "Длительность режима «Отпуск» должна быть больше одного дня!",
+    "CL_CF_FM_food_type": "Тип еды",
+    "CL_CF_FM_add_food_from_lib": "Добавить еду из библиотеки"
 }
