--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "петак",
     "CL_CF_CP_saturday": "Субота",
     "CL_CF_CP_sunday": "недеља",
-    "CL_DV_OV_delay_start_end_desc": "Можете да одложите свој програм кувања тако што ћете подесити жељено време почетка или завршетка. Када одаберете један, други ће бити аутоматски израчунат."
+    "CL_DV_OV_delay_start_end_desc": "Можете да одложите свој програм кувања тако што ћете подесити жељено време почетка или завршетка. Када одаберете један, други ће бити аутоматски израчунат.",
+    "drink_inventory": "Инвентар пића",
+    "ac_statistice_content": "Ови статистички подаци се заснивају на мрежној статистици, а део података се заснива на лабораторијским условима мерења, само за кориснике.",
+    "CL_CF_FM_x_items_selected": "*** одабране ставке",
+    "CL_CF_FM_remove_items": "Уклони ставке",
+    "p_try_again": "покушајте поново",
+    "exit_report_i": "ПРОБЛЕМ ИЗВЕШТАВАЊА ИЗЛАЗА",
+    "AW": "Аруба",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "Брзо смањите температуру у пећници након завршетка кувања или између кувања различитих јела.",
+    "CL_CF_CS_ble_scan_not_list_2": "Ако ваш уређај није на листи, можете да кликнете на „ПОКУШАЈ ПОНОВНО“ да бисте га поново открили путем блутута.",
+    "CL_CF_CS_ble_scan_another_way": "Конфигуришите на други начин",
+    "CL_CF_CS_ble_scan_have_found": "Пронашли смо уређаје преко блуетоотх-а. Изаберите уређај који желите да конфигуришете.",
+    "pump_holiday_start_time_greater_one_day": "Podešavanje režima za odmor mora da bude veće od 1 dana!",
+    "CL_CF_FM_food_type": "Врста хране",
+    "CL_CF_FM_add_food_from_lib": "Додајте храну из библиотеке"
 }
