--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "fredag",
     "CL_CF_CP_saturday": "lördag",
     "CL_CF_CP_sunday": "söndag",
-    "CL_DV_OV_delay_start_end_desc": "Du kan fördröja ditt tillagningsprogram genom att ställa in antingen önskad start- eller sluttid. När du väl har valt en kommer den andra att beräknas automatiskt."
+    "CL_DV_OV_delay_start_end_desc": "Du kan fördröja ditt tillagningsprogram genom att ställa in antingen önskad start- eller sluttid. När du väl har valt en kommer den andra att beräknas automatiskt.",
+    "drink_inventory": "Drycksinventering",
+    "ac_statistice_content": "Dessa statistiska data är baserade på nätverksstatistik, och en del av datan är baserad på laboratorieförhållanden som mätts, endast för användarnas referens.",
+    "CL_CF_FM_x_items_selected": "*** objekt valda",
+    "CL_CF_FM_remove_items": "Ta bort objekt",
+    "p_try_again": "försök igen",
+    "exit_report_i": "AVSLUTA RAPPORTERINGSFRÅGET",
+    "AW": "Aruba",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "Sänk snabbt temperaturen inuti ugnen efter att tillagningen är klar eller mellan olika rätter.",
+    "CL_CF_CS_ble_scan_not_list_2": "Om din enhet inte finns med i listan kan du klicka på \"FÖRSÖKA IGEN\" för att upptäcka via Bluetooth igen.",
+    "CL_CF_CS_ble_scan_another_way": "Konfigurera på annat sätt",
+    "CL_CF_CS_ble_scan_have_found": "Vi hittade enheter via bluetooth. Välj din enhet att konfigurera.",
+    "pump_holiday_start_time_greater_one_day": "Semesterläget måste ställas in med mer än en dag!",
+    "CL_CF_FM_food_type": "Typ av mat",
+    "CL_CF_FM_add_food_from_lib": "Lägg till mat från biblioteket"
 }
