--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "วันศุกร์",
     "CL_CF_CP_saturday": "วันเสาร์",
     "CL_CF_CP_sunday": "วันอาทิตย์",
-    "CL_DV_OV_delay_start_end_desc": "คุณสามารถเลื่อนโปรแกรมการปรุงอาหารได้โดยตั้งเวลาเริ่มต้นหรือสิ้นสุดที่ต้องการ เมื่อเลือกเวลาหนึ่งแล้ว ระบบจะคำนวณเวลาที่เหลือให้โดยอัตโนมัติ"
+    "CL_DV_OV_delay_start_end_desc": "คุณสามารถเลื่อนโปรแกรมการปรุงอาหารได้โดยตั้งเวลาเริ่มต้นหรือสิ้นสุดที่ต้องการ เมื่อเลือกเวลาหนึ่งแล้ว ระบบจะคำนวณเวลาที่เหลือให้โดยอัตโนมัติ",
+    "drink_inventory": "สินค้าคงคลังเครื่องดื่ม",
+    "ac_statistice_content": "ข้อมูลสถิติเหล่านี้เป็นข้อมูลที่พื้นฐานบนสถิติของเครือข่าย และบางส่วนของข้อมูลเป็นข้อมูลที่วัดภายใต้เงื่อนไขห้องทดลองเท่านั้น สำหรับการอ้างอิงของผู้ใช้เท่านั้น",
+    "CL_CF_FM_x_items_selected": "*** รายการที่เลือก",
+    "CL_CF_FM_remove_items": "ลบรายการ",
+    "p_try_again": "กรุณาลองอีกครั้ง",
+    "exit_report_i": "ปัญหาการรายงานการออก",
+    "AW": "อารูบา",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "ลดอุณหภูมิภายในเตาอบอย่างรวดเร็วหลังจากทำอาหารเสร็จหรือระหว่างปรุงอาหารจานต่างๆ",
+    "CL_CF_CS_ble_scan_not_list_2": "หากไม่มีอุปกรณ์ของคุณอยู่ในรายการ คุณสามารถคลิก \"ลองอีกครั้ง\" เพื่อตรวจจับผ่านบลูทูธอีกครั้ง",
+    "CL_CF_CS_ble_scan_another_way": "กำหนดค่าอีกวิธีหนึ่ง",
+    "CL_CF_CS_ble_scan_have_found": "เราพบอุปกรณ์ผ่านบลูทูธ เลือกอุปกรณ์ของคุณเพื่อกำหนดค่า",
+    "pump_holiday_start_time_greater_one_day": "การตั้งค่าโหมดวันหยุดต้องมากกว่า 1 วัน",
+    "CL_CF_FM_food_type": "ประเภทอาหาร",
+    "CL_CF_FM_add_food_from_lib": "เพิ่มอาหารจากห้องสมุด"
 }
