--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "Vendredi",
     "CL_CF_CP_saturday": "Samedi",
     "CL_CF_CP_sunday": "Dimanche",
-    "CL_DV_OV_delay_start_end_desc": "Vous pouvez retarder votre programme de cuisson en définissant votre heure de début ou de fin préférée. Une fois que vous avez choisi l'une des deux, l'autre sera automatiquement calculée."
+    "CL_DV_OV_delay_start_end_desc": "Vous pouvez retarder votre programme de cuisson en définissant votre heure de début ou de fin préférée. Une fois que vous avez choisi l'une des deux, l'autre sera automatiquement calculée.",
+    "drink_inventory": "Inventaire des boissons",
+    "ac_statistice_content": "Ces données statistiques sont basées sur les statistiques du réseau, et une partie des données est basée sur les conditions de laboratoire mesurées, uniquement à titre de référence pour l’utilisateur.",
+    "CL_CF_FM_x_items_selected": "*** éléments sélectionnés",
+    "CL_CF_FM_remove_items": "Supprimer des éléments",
+    "p_try_again": "Veuillez réessayer",
+    "exit_report_i": "PROBLÈME DE RAPPORT DE SORTIE",
+    "AW": "Aruba",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "Baissez rapidement la température à l'intérieur du four une fois la cuisson terminée ou entre deux cuissons de plats.",
+    "CL_CF_CS_ble_scan_not_list_2": "Si votre appareil n'est pas répertorié, vous pouvez cliquer sur « RÉESSAYER » pour détecter à nouveau via Bluetooth.",
+    "CL_CF_CS_ble_scan_another_way": "Configurer d'une autre manière",
+    "CL_CF_CS_ble_scan_have_found": "Nous avons trouvé des appareils via Bluetooth. Sélectionnez votre appareil à configurer.",
+    "pump_holiday_start_time_greater_one_day": "Le réglage du mode Vacances doit être supérieur à 1 jour !",
+    "CL_CF_FM_food_type": "Type d'aliment",
+    "CL_CF_FM_add_food_from_lib": "Ajouter de la nourriture à partir de la bibliothèque"
 }
