--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "péntek",
     "CL_CF_CP_saturday": "szombat",
     "CL_CF_CP_sunday": "vasárnap",
-    "CL_DV_OV_delay_start_end_desc": "A kívánt kezdési vagy befejezési időpont beállításával késleltetheti a főzési programot. Miután kiválasztotta az egyiket, a másik automatikusan kiszámításra kerül."
+    "CL_DV_OV_delay_start_end_desc": "A kívánt kezdési vagy befejezési időpont beállításával késleltetheti a főzési programot. Miután kiválasztotta az egyiket, a másik automatikusan kiszámításra kerül.",
+    "drink_inventory": "Italkészlet",
+    "ac_statistice_content": "Ez a statisztikai adatok a hálózati statisztikákra épülnek, és az adatok egy része laboratóriumi körülmények között mértek, csak a felhasználók számára.",
+    "CL_CF_FM_x_items_selected": "*** elemek kiválasztva",
+    "CL_CF_FM_remove_items": "Elemek eltávolítása",
+    "p_try_again": "próbáld újra",
+    "exit_report_i": "KILÉPÉS A JELENTÉSI PROBLÉMÁBÓL",
+    "AW": "Aruba",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "Gyorsan csökkentse a sütő belsejében a hőmérsékletet a főzés befejezése után, vagy amikor a különböző ételek elkészítése között.",
+    "CL_CF_CS_ble_scan_not_list_2": "Ha eszköze nem szerepel a listában, kattintson az „ÚJRAPRÓBÁLÁS” gombra, hogy ismét észlelje a Bluetooth segítségével.",
+    "CL_CF_CS_ble_scan_another_way": "Konfigurálja más módon",
+    "CL_CF_CS_ble_scan_have_found": "Bluetoothon keresztül találtunk eszközöket. Válassza ki a konfigurálni kívánt eszközt.",
+    "pump_holiday_start_time_greater_one_day": "Az üzemszünet mód beállításának hosszabbnak kell lennie, mint 1 nap!",
+    "CL_CF_FM_food_type": "Élelmiszer típusa",
+    "CL_CF_FM_add_food_from_lib": "Élelmiszer hozzáadása a könyvtárból"
 }
