--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -148,7 +148,7 @@
     "ac_wind_direction": "Ventilatorrichting",
     "ac_ai": "AI",
     "ac_has_close": "Gesloten",
-    "ac_people_feel_wind": "AI wind",
+    "ac_people_feel_wind": "AI Wind",
     "ac_sleep": "Slaap",
     "ac_mute": "Stille modus",
     "ac_save_energy": "Energiebesparend",
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "Vrijdag",
     "CL_CF_CP_saturday": "Zaterdag",
     "CL_CF_CP_sunday": "Zondag",
-    "CL_DV_OV_delay_start_end_desc": "U kunt uw kookprogramma uitstellen door uw gewenste begin- of eindtijd in te stellen. Zodra u er een hebt gekozen, wordt de andere automatisch berekend."
+    "CL_DV_OV_delay_start_end_desc": "U kunt uw kookprogramma uitstellen door uw gewenste begin- of eindtijd in te stellen. Zodra u er een hebt gekozen, wordt de andere automatisch berekend.",
+    "drink_inventory": "Drankinventaris",
+    "ac_statistice_content": "Deze statistische gegevens zijn gebaseerd op netwerkstatistieken, en een deel van de gegevens is gebaseerd op laboratoriumomstandigheden gemeten, alleen ter referentie van gebruikers.",
+    "CL_CF_FM_x_items_selected": "*** items geselecteerd",
+    "CL_CF_FM_remove_items": "Items verwijderen",
+    "p_try_again": "probeer het nog eens",
+    "exit_report_i": "EXIT-RAPPORTAGEPROBLEEM",
+    "AW": "Aruba",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "Verlaag de temperatuur in de oven snel nadat het koken is voltooid of tussen het koken van verschillende gerechten.",
+    "CL_CF_CS_ble_scan_not_list_2": "Als uw apparaat niet in de lijst staat, kunt u op 'OPNIEUW PROBEREN' klikken om het opnieuw via Bluetooth te laten detecteren.",
+    "CL_CF_CS_ble_scan_another_way": "Op een andere manier configureren",
+    "CL_CF_CS_ble_scan_have_found": "We hebben apparaten gevonden via bluetooth. Selecteer uw apparaat om te configureren.",
+    "pump_holiday_start_time_greater_one_day": "De vakantiemodusinstelling moet langer zijn dan 1 dag!",
+    "CL_CF_FM_food_type": "Voedselsoort",
+    "CL_CF_FM_add_food_from_lib": "Voeg voedsel toe vanuit de bibliotheek"
 }
