--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "星期五",
     "CL_CF_CP_saturday": "周六",
     "CL_CF_CP_sunday": "星期日",
-    "CL_DV_OV_delay_start_end_desc": "您可以通过设置首选的开始或结束时间来延迟烹饪程序。选择其中一个时间后，另一个时间将自动计算。"
+    "CL_DV_OV_delay_start_end_desc": "您可以通过设置首选的开始或结束时间来延迟烹饪程序。选择其中一个时间后，另一个时间将自动计算。",
+    "drink_inventory": "饮品库存",
+    "ac_statistice_content": "本统计数据基于网络统计，部分数据基于实验室条件实测，仅供用户参考。",
+    "CL_CF_FM_x_items_selected": "*** 已选择商品",
+    "CL_CF_FM_remove_items": "移除項目",
+    "p_try_again": "请重试",
+    "exit_report_i": "退出报告问题",
+    "AW": "阿鲁巴岛",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "烹饪完成后或在烹饪不同菜肴之间迅速降低烤箱内的温度。",
+    "CL_CF_CS_ble_scan_not_list_2": "如果您的设备未列出，您可以单击“重试”再次通过蓝牙检测。",
+    "CL_CF_CS_ble_scan_another_way": "以其他方式配置",
+    "CL_CF_CS_ble_scan_have_found": "我们通过蓝牙找到了设备。选择要配置的设备。",
+    "pump_holiday_start_time_greater_one_day": "假日模式设置必须大于 1 天！",
+    "CL_CF_FM_food_type": "食物类型",
+    "CL_CF_FM_add_food_from_lib": "从库中添加食物"
 }
